fix nullpointer and immutable list issues